--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</p>
 	</main>
 	<footer>
-		<p>&#169; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
+		<p>&#169;Yavuz 2023, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
 	</footer>
 </body>
 </html>
